--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.26
+langchain-community==0.3.26
 langchain-core==0.3.66
 langchain-fireworks==0.3.0
 langchain-ollama==0.3.3
@@ -73,6 +74,7 @@ pillow==11.2.1
 propcache==0.3.2
 protobuf==5.29.4
 pyarrow==20.0.0
+pybreaker==1.3.0
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
@@ -82,6 +84,7 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 pyyaml==6.0.2
+redis==5.0.7
 regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
